# cp1/ta/swagger_server/controllers/default_controller.py
@@ -2,6 +2,7 @@ import connexion
 from swagger_server.models.inline_response200 import InlineResponse200
 from swagger_server.models.inline_response2001 import InlineResponse2001
 from swagger_server.models.inline_response2002 import InlineResponse2002
+from swagger_server.models.inline_response2003 import InlineResponse2003
 from swagger_server.models.inline_response400 import InlineResponse400
 from swagger_server.models.inline_response4001 import InlineResponse4001
 from swagger_server.models.inline_response4002 import InlineResponse4002
@@ -13,6 +14,16 @@ from datetime import date, datetime
 from typing import List, Dict
 from six import iteritems
 from ..util import deserialize_date, deserialize_datetime
+
+
+def action_observe_get():
+    """
+    action_observe_get
+    observe some of the current state of the robot for visualization and invariant checking for perturbation end points. n.b. this information is to be used strictly in a passive way; it is not to be used for evaluation of the test at all.
+
+    :rtype: InlineResponse2003
+    """
+    return 'do some magic!'
 
 
 def action_start_post():
