# cp1/ta/swagger_server/models/__init__.py
@@ -5,6 +5,7 @@ from __future__ import absolute_import
 from .inline_response200 import InlineResponse200
 from .inline_response2001 import InlineResponse2001
 from .inline_response2002 import InlineResponse2002
+from .inline_response2003 import InlineResponse2003
 from .inline_response400 import InlineResponse400
 from .inline_response4001 import InlineResponse4001
 from .inline_response4002 import InlineResponse4002
