# cp1/ta/swagger_server/models/inline_response2003.py
@@ -12,7 +12,7 @@ class InlineResponse2003(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, x: float=None, y: float=None, w: float=None, v: float=None, charge: int=None, predicted_arrival: int=None, sim_time: int=None):
+    def __init__(self, x: float=None, y: float=None, battery: int=None, sim_time: int=None):
         """
         InlineResponse2003 - a model defined in Swagger
 
@@ -20,43 +20,28 @@ class InlineResponse2003(Model):
         :type x: float
         :param y: The y of this InlineResponse2003.
         :type y: float
-        :param w: The w of this InlineResponse2003.
-        :type w: float
-        :param v: The v of this InlineResponse2003.
-        :type v: float
-        :param charge: The charge of this InlineResponse2003.
-        :type charge: int
-        :param predicted_arrival: The predicted_arrival of this InlineResponse2003.
-        :type predicted_arrival: int
+        :param battery: The battery of this InlineResponse2003.
+        :type battery: int
         :param sim_time: The sim_time of this InlineResponse2003.
         :type sim_time: int
         """
         self.swagger_types = {
             'x': float,
             'y': float,
-            'w': float,
-            'v': float,
-            'charge': int,
-            'predicted_arrival': int,
+            'battery': int,
             'sim_time': int
         }
 
         self.attribute_map = {
             'x': 'x',
             'y': 'y',
-            'w': 'w',
-            'v': 'v',
-            'charge': 'charge',
-            'predicted_arrival': 'predicted_arrival',
-            'sim_time': 'sim_time'
+            'battery': 'battery',
+            'sim_time': 'sim-time'
         }
 
         self._x = x
         self._y = y
-        self._w = w
-        self._v = v
-        self._charge = charge
-        self._predicted_arrival = predicted_arrival
+        self._battery = battery
         self._sim_time = sim_time
 
     @classmethod
@@ -75,7 +60,7 @@ class InlineResponse2003(Model):
     def x(self) -> float:
         """
         Gets the x of this InlineResponse2003.
-        current x-coordinate of the turtlebot position
+        the current x coordinate of the bot. must be within the boundaries of the map.
 
         :return: The x of this InlineResponse2003.
         :rtype: float
@@ -86,7 +71,7 @@ class InlineResponse2003(Model):
     def x(self, x: float):
         """
         Sets the x of this InlineResponse2003.
-        current x-coordinate of the turtlebot position
+        the current x coordinate of the bot. must be within the boundaries of the map.
 
         :param x: The x of this InlineResponse2003.
         :type x: float
@@ -100,7 +85,7 @@ class InlineResponse2003(Model):
     def y(self) -> float:
         """
         Gets the y of this InlineResponse2003.
-        current y-coordinate of the turtlebot position
+        the current y coordinate of the bot. must be within the boundaries of the map.
 
         :return: The y of this InlineResponse2003.
         :rtype: float
@@ -111,7 +96,7 @@ class InlineResponse2003(Model):
     def y(self, y: float):
         """
         Sets the y of this InlineResponse2003.
-        current y-coordinate of the turtlebot position
+        the current y coordinate of the bot. must be within the boundaries of the map.
 
         :param y: The y of this InlineResponse2003.
         :type y: float
@@ -122,112 +107,37 @@ class InlineResponse2003(Model):
         self._y = y
 
     @property
-    def w(self) -> float:
+    def battery(self) -> int:
         """
-        Gets the w of this InlineResponse2003.
-        current yaw of the turtlebot aspect
+        Gets the battery of this InlineResponse2003.
+        the current charge of the battery, in mWh
 
-        :return: The w of this InlineResponse2003.
-        :rtype: float
-        """
-        return self._w
-
-    @w.setter
-    def w(self, w: float):
-        """
-        Sets the w of this InlineResponse2003.
-        current yaw of the turtlebot aspect
-
-        :param w: The w of this InlineResponse2003.
-        :type w: float
-        """
-        if w is None:
-            raise ValueError("Invalid value for `w`, must not be `None`")
-
-        self._w = w
-
-    @property
-    def v(self) -> float:
-        """
-        Gets the v of this InlineResponse2003.
-        current velocity of the turtlebot
-
-        :return: The v of this InlineResponse2003.
-        :rtype: float
-        """
-        return self._v
-
-    @v.setter
-    def v(self, v: float):
-        """
-        Sets the v of this InlineResponse2003.
-        current velocity of the turtlebot
-
-        :param v: The v of this InlineResponse2003.
-        :type v: float
-        """
-        if v is None:
-            raise ValueError("Invalid value for `v`, must not be `None`")
-
-        self._v = v
-
-    @property
-    def charge(self) -> int:
-        """
-        Gets the charge of this InlineResponse2003.
-        current charge of the battery, in mWh. cannot be more than the maximum given in the TH response to `/ready`.
-
-        :return: The charge of this InlineResponse2003.
+        :return: The battery of this InlineResponse2003.
         :rtype: int
         """
-        return self._charge
+        return self._battery
 
-    @charge.setter
-    def charge(self, charge: int):
+    @battery.setter
+    def battery(self, battery: int):
         """
-        Sets the charge of this InlineResponse2003.
-        current charge of the battery, in mWh. cannot be more than the maximum given in the TH response to `/ready`.
+        Sets the battery of this InlineResponse2003.
+        the current charge of the battery, in mWh
 
-        :param charge: The charge of this InlineResponse2003.
-        :type charge: int
+        :param battery: The battery of this InlineResponse2003.
+        :type battery: int
         """
-        if charge is None:
-            raise ValueError("Invalid value for `charge`, must not be `None`")
-        if charge is not None and charge < 0:
-            raise ValueError("Invalid value for `charge`, must be a value greater than or equal to `0`")
+        if battery is None:
+            raise ValueError("Invalid value for `battery`, must not be `None`")
+        if battery is not None and battery < 0:
+            raise ValueError("Invalid value for `battery`, must be a value greater than or equal to `0`")
 
-        self._charge = charge
-
-    @property
-    def predicted_arrival(self) -> int:
-        """
-        Gets the predicted_arrival of this InlineResponse2003.
-        current predicted arrival time, in simulation seconds
-
-        :return: The predicted_arrival of this InlineResponse2003.
-        :rtype: int
-        """
-        return self._predicted_arrival
-
-    @predicted_arrival.setter
-    def predicted_arrival(self, predicted_arrival: int):
-        """
-        Sets the predicted_arrival of this InlineResponse2003.
-        current predicted arrival time, in simulation seconds
-
-        :param predicted_arrival: The predicted_arrival of this InlineResponse2003.
-        :type predicted_arrival: int
-        """
-        if predicted_arrival is None:
-            raise ValueError("Invalid value for `predicted_arrival`, must not be `None`")
-
-        self._predicted_arrival = predicted_arrival
+        self._battery = battery
 
     @property
     def sim_time(self) -> int:
         """
         Gets the sim_time of this InlineResponse2003.
-        current simulation time
+        the time when this observation was computed, in simulation seconds
 
         :return: The sim_time of this InlineResponse2003.
         :rtype: int
@@ -238,7 +148,7 @@ class InlineResponse2003(Model):
     def sim_time(self, sim_time: int):
         """
         Sets the sim_time of this InlineResponse2003.
-        current simulation time
+        the time when this observation was computed, in simulation seconds
 
         :param sim_time: The sim_time of this InlineResponse2003.
         :type sim_time: int
