# cp1/ta/swagger_server/swagger/swagger.yaml
@@ -7,7 +7,7 @@ host: "brass-ta"
 schemes:
 - "http"
 paths:
-  /perturb/place_obstacle:
+  /perturb/place-obstacle:
     post:
       description: "if the test is running, then place an instance of the obstacle\
         \ on the map"
@@ -28,7 +28,7 @@ paths:
           schema:
             $ref: "#/definitions/inline_response_400"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
-  /perturb/remove_obstacle:
+  /perturb/remove-obstacle:
     post:
       description: "if the test is running, remove a previously placed obstacle from\
         \ the map"
@@ -82,6 +82,22 @@ paths:
           schema:
             $ref: "#/definitions/inline_response_400_3"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
+  /action/observe:
+    get:
+      description: "observe some of the current state of the robot for visualization\
+        \ and invariant checking for perturbation end points. n.b. this information\
+        \ is to be used strictly in a passive way; it is not to be used for evaluation\
+        \ of the test at all."
+      operationId: "action_observe_get"
+      parameters: []
+      responses:
+        200:
+          description: "successfully computed the observation"
+          schema:
+            $ref: "#/definitions/inline_response_200_3"
+        400:
+          description: "encountered an error while computing the observation"
+      x-swagger-router-controller: "swagger_server.controllers.default_controller"
 definitions:
   inline_response_400_3:
     properties:
@@ -109,7 +125,7 @@ definitions:
     properties:
       obstacleid:
         type: "string"
-        description: "the obstacle ID given by /perturb/place_obstacle of the obstacle\
+        description: "the obstacle ID given by /perturb/place-obstacle of the obstacle\
           \ to be removed."
   Parameters_2:
     type: "object"
@@ -123,54 +139,79 @@ definitions:
         minimum: 0
   inline_response_200_1:
     required:
-    - "sim_time"
+    - "sim-time"
     properties:
-      sim_time:
+      sim-time:
         type: "integer"
         description: "the simulation time when the obstacle was placed"
   inline_response_200:
     required:
-    - "botright_x"
-    - "botright_y"
+    - "botright-x"
+    - "botright-y"
     - "obstacleid"
-    - "sim_time"
-    - "topleft_x"
-    - "topleft_y"
+    - "sim-time"
+    - "topleft-x"
+    - "topleft-y"
     properties:
       obstacleid:
         type: "string"
         description: "a unique identifier for this particular placed obstacle, so\
           \ that it can be removed in the future"
-      topleft_x:
+      topleft-x:
         type: "number"
         format: "float"
         description: "the x-coordinate of the top left corner of the bounding box\
           \ of the placed obstacle"
-      topleft_y:
+      topleft-y:
         type: "number"
         format: "float"
         description: "the y-coordinate of the top left corner of the bounding box\
           \ of the placed obstacle"
-      botright_x:
+      botright-x:
         type: "number"
         format: "float"
         description: "the x-coordinate of the bottom right corner of the bounding\
           \ box of the placed obstacle"
-      botright_y:
+      botright-y:
         type: "number"
         format: "float"
         description: "the y-coordinate of the bottom right corner of the bounding\
           \ box of the placed obstacle"
-      sim_time:
+      sim-time:
         type: "integer"
         description: "the simulation time when the obstacle was placed"
   inline_response_200_2:
     required:
-    - "sim_time"
+    - "sim-time"
     properties:
-      sim_time:
+      sim-time:
         type: "integer"
         description: "the simulation time when the battery was set"
+  inline_response_200_3:
+    required:
+    - "battery"
+    - "sim-time"
+    - "x"
+    - "y"
+    properties:
+      x:
+        type: "number"
+        format: "float"
+        description: "the current x coordinate of the bot. must be within the boundaries\
+          \ of the map."
+      y:
+        type: "number"
+        format: "float"
+        description: "the current y coordinate of the bot. must be within the boundaries\
+          \ of the map."
+      battery:
+        type: "integer"
+        description: "the current charge of the battery, in mWh"
+        minimum: 0
+      sim-time:
+        type: "integer"
+        description: "the time when this observation was computed, in simulation seconds"
+        minimum: 0
   inline_response_400_2:
     required:
     - "message"
@@ -187,8 +228,8 @@ definitions:
         type: "string"
         description: "a reason for the error condition"
         enum:
-        - "bad_coordiantes"
-        - "other_error"
+        - "bad-coordiantes"
+        - "other-error"
       message:
         type: "string"
         description: "human readable info about what went wrong"
@@ -199,12 +240,12 @@ definitions:
     properties:
       cause:
         type: "string"
-        description: "a reason for the error condition. `bad_obstacleid` is used if\
+        description: "a reason for the error condition. `bad-obstacleid` is used if\
           \ this endpoint is given a obstacleid in its parameters that was not given\
-          \ out by place_obstacle; `other_error` is used in all other instances."
+          \ out by place-obstacle; `other-error` is used in all other instances."
         enum:
-        - "bad_obstacleid"
-        - "other_error"
+        - "bad-obstacleid"
+        - "other-error"
       message:
         type: "string"
         description: "human readable info about what went wrong"
